# Mini-Grant-Finder

./: .claudeignore  .gitignore  CONTRIBUTING.md  PROJECT_NOTES.md  Procfile  README.md  pyproject.toml  render.yaml  requirements.txt  setup.cfg
.github/workflows/: daily_scrape.yml
.streamlit/: config.toml
config/: delta_profile.yaml  grant_sources.yaml  keywords.yaml
dashboard/: __init__.py  app.py  data_loader.py  style.css
dashboard/components/: __init__.py  filters.py  grant_table.py  metrics.py
dashboard/pages/: __init__.py  deadline_alerts.py  grant_detail.py
data/processed/: grants_cli_2026-03-27.json  grants_cli_2026-03-30.json  grants_daily_2026-03-23.json  grants_daily_2026-03-24.json  grants_daily_2026-03-25.json  grants_daily_2026-03-26.json  grants_daily_2026-03-27.json  grants_daily_2026-03-30.json  grants_daily_2026-03-31.json  grants_daily_2026-04-01.json  grants_daily_2026-04-02.json  grants_daily_2026-04-03.json  grants_daily_2026-04-06.json  grants_daily_2026-04-07.json  grants_daily_2026-04-08.json  grants_daily_2026-04-09.json  grants_daily_2026-04-10.json  grants_daily_2026-04-13.json  grants_daily_2026-04-14.json  grants_daily_2026-04-15.json  grants_daily_2026-04-16.json  grants_daily_2026-04-17.json  grants_daily_2026-04-20.json  grants_daily_2026-04-21.json  grants_daily_2026-04-22.json  grants_daily_2026-04-23.json  grants_daily_2026-04-24.json  grants_daily_2026-04-27.json  grants_daily_2026-04-28.json  grants_daily_2026-04-29.json  grants_daily_2026-04-30.json  grants_daily_2026-05-01.json  grants_daily_2026-05-04.json  grants_daily_2026-05-05.json  grants_daily_2026-05-06.json  grants_daily_2026-05-07.json  grants_daily_2026-05-08.json  grants_daily_2026-05-11.json  grants_daily_2026-05-12.json  grants_daily_2026-05-13.json  (+52 more)
docs/: Mini_Grant_Finder_Proposal.md
research/: BEST_MATCHES_and_Earth_Day_Auction_Plan.md  Delta_Rising_ALL_Grants_Feb2026.csv  Delta_Rising_FULL_Grant_List_Feb2026.md  Delta_Rising_Foundation_Mini_Grants_Feb2026.md  Delta_Rising_Grants_Summary.csv  FOR_SARAH_Active_Grants_Feb2026.csv  MINI_GRANTS_ONLY.csv  SPONSORSHIP_REQUESTS_LA_OC.csv  VERIFIED_Sponsorships_LA_OC.csv  automation_approaches.md  grant_sources.md  mini_grants_list.md
src/: __init__.py  cli.py  main.py
src/loaders/: __init__.py  csv_loader.py
src/models/: __init__.py  grant.py  source.py
src/pipeline/: __init__.py  processor.py
src/scoring/: __init__.py  program_matcher.py  relevance.py
src/scrapers/: __init__.py  base.py  grants_gov.py  keyword_search.py  rss_monitor.py  website_scraper.py
src/storage/: __init__.py  local.py  sheets.py
tests/: conftest.py  test_loaders.py  test_models.py  test_pipeline.py  test_scoring.py
