[metadata]
name = mini-grant-finder
version = attr: src.__version__
description = Automated grant discovery dashboard for Delta Rising Foundation
long_description = file: README.md
long_description_content_type = text/markdown
author = Sneha Maurya
author_email = sneha@deltarising.org
license = MIT
license_files = LICENSE
url = https://github.com/sneha1012/Mini-Grant-Finder
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business

[options]
python_requires = >=3.10
packages = find:
include_package_data = True

[options.packages.find]
include =
    src*
    dashboard*

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git, __pycache__, build, dist, .eggs

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short
